# flask_project

./: .gitignore  package-lock.json  package.json  pyproject.toml  tailwind.config.js
app/: __init__.py  utils.py
app/models/: Book.py  User.py  UserBooks.py
app/static/: style.css
app/templates/: layout.html
app/templates/auth/: login.html  register.html
app/templates/books/: list.html  show.html
app/views/: admin.py  auth.py  books.py  user.py  users.py
