[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
flask-sqlalchemy = "^3.1.1"
flask-jwt-extended = "^4.6.0"
bcrypt = "^4.2.0"


[tool.poetry.group.dev.dependencies]
djlint = "^1.35.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
